# MeshFTP

./: README.md  pyproject.toml
src/mftp/: __init__.py  client.py  common.py  server.py  tui_client.py
