[project]
name = "mftp"
version = "0.1.0"
description = "Meshtastic File Transfer Protocol"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=0.21.1",
    "loguru>=0.7.3",
    "meshtastic>=2.0.0",
    "pypubsub>=4.0.3",
    "textual>=0.47.0",
]

[project.scripts]
mftp-server = "mftp.server:main"
mftp-client = "mftp.client:main"
mftp-tui = "mftp.tui_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mftp"]
